# Health-Management-System

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 217accd61b62_initial.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  claims.py  providers.py
backend/app/core/: config.py  dependencies.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/crud/: auth.py  claim.py  provider.py
backend/app/db/models/: claim.py  provider.py  user.py
backend/app/db/schemas/: auth.py  claim.py  provider.py
backend/app/services/: claims_parser.py  s3.py
backend/scripts/: seed.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_auth_api.py
backend/tests/unit/: test_claims_parser.py  test_s3.py  test_security.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  index.ts  types.ts
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: ClaimsPage.tsx  DashboardPage.tsx  LoginPage.test.tsx  LoginPage.tsx  ProvidersPage.tsx  UploadPage.tsx
frontend/src/routes/: ProtectedRoute.tsx
frontend/tests/e2e/: app.spec.ts
infrastructure/environments/localstack/: main.tf
infrastructure/environments/production/: main.tf  (+2 more)
(+7 files in other folders)
